connected with hotels

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,112 +29,112 @@
 	<section class="hotels">
 		<h1>Hotels</h1>
 		<div class="container">
-			<div class="row">
-				<div class="col-md-4">
-					<a href="rooms.html#listofrooms">
-					<div class="hotels-box">
-						<div class="hotels-img">
-						<img src="images/logo.jpg">
-						<div class="price"><p>$100</p></div>
-						<div class="rating">
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star-half-o"></i>
-							<i class="fa fa-star-o"></i>
-						</div>
-						</div>
-						<div class="hotel-details">
-							<h4>Hotel Trivago</h4>
-							<p>This hotel is great because it is very much great and so great that you should be grateful about reading this great hotel</p>
-						</div>
-					</div>
-					</a>
-				</div>
-				<div class="col-md-4">
-					<a href="rooms.html">
-					<div class="hotels-box">
-						<div class="hotels-img">
-						<img src="images/logo.jpg">
-						<div class="price"><p>$100</p></div>
-						<div class="rating">
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star-half-o"></i>
-							<i class="fa fa-star-o"></i>
-						</div>
-						</div>
-						<div class="hotel-details">
-							<h4>Hotel Trivago</h4>
-							<p>This hotel is great because it is very much great and so great that you should be grateful about reading this great hotel</p>
-						</div>
-					</div>
-					</a>
-				</div>
-				<div class="col-md-4">
-					<a href="rooms.html">
-					<div class="hotels-box">
-						<div class="hotels-img">
-						<img src="images/logo.jpg">
-						<div class="price"><p>$100</p></div>
-						<div class="rating">
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star-half-o"></i>
-							<i class="fa fa-star-o"></i>
-						</div>
-						</div>
-						<div class="hotel-details">
-							<h4>Hotel Trivago</h4>
-							<p>This hotel is great because it is very much great and so great that you should be grateful about reading this great hotel</p>
-						</div>
-					</div>
-					</a>
-				</div>
-				<div class="col-md-4">
-					<a href="rooms.html">
-					<div class="hotels-box">
-						<div class="hotels-img">
-						<img src="images/logo.jpg">
-						<div class="price"><p>$100</p></div>
-						<div class="rating">
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star-half-o"></i>
-							<i class="fa fa-star-o"></i>
-						</div>
-						</div>
-						<div class="hotel-details">
-							<h4>Hotel Trivago</h4>
-							<p>This hotel is great because it is very much great and so great that you should be grateful about reading this great hotel</p>
-						</div>
-					</div>
-					</a>
-				</div>
-				<div class="col-md-4">
-					<a href="rooms.html">
-					<div class="hotels-box">
-						<div class="hotels-img">
-						<img src="images/logo.jpg">
-						<div class="price"><p>$100</p></div>
-						<div class="rating">
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star-half-o"></i>
-							<i class="fa fa-star-o"></i>
-						</div>
-						</div>
-						<div class="hotel-details">
-							<h4>Hotel Trivago</h4>
-							<p>This hotel is great because it is very much great and so great that you should be grateful about reading this great hotel</p>
-						</div>
-					</div>
-					</a>
-				</div>
+			<div class="row" id="hotels">
+<!--				<div class="col-md-4">-->
+<!--					<a href="rooms.html#listofrooms">-->
+<!--					<div class="hotels-box">-->
+<!--						<div class="hotels-img">-->
+<!--							<img src="images/logo.jpg">-->
+<!--							<div class="countryCity"><span>Country#1, City#1</span></div>-->
+<!--							<div class="rating">-->
+<!--								<i class="fa fa-star"></i>-->
+<!--								<i class="fa fa-star"></i>-->
+<!--								<i class="fa fa-star"></i>-->
+<!--								<i class="fa fa-star-half-o"></i>-->
+<!--								<i class="fa fa-star-o"></i>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--						<div class="hotel-details">-->
+<!--							<h4>Hotel</h4>-->
+<!--							<p>Description 1</p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					</a>-->
+<!--				</div>-->
+<!--				<div class="col-md-4">-->
+<!--					<a href="rooms.html">-->
+<!--					<div class="hotels-box">-->
+<!--						<div class="hotels-img">-->
+<!--						<img src="images/logo.jpg">-->
+<!--						<div class="countryCity"><p>$100</p></div>-->
+<!--						<div class="rating">-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star-half-o"></i>-->
+<!--							<i class="fa fa-star-o"></i>-->
+<!--						</div>-->
+<!--						</div>-->
+<!--						<div class="hotel-details">-->
+<!--							<h4>Hotel Trivago</h4>-->
+<!--							<p>This hotel is great because it is very much great and so great that you should be grateful about reading this great hotel</p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					</a>-->
+<!--				</div>-->
+<!--				<div class="col-md-4">-->
+<!--					<a href="rooms.html">-->
+<!--					<div class="hotels-box">-->
+<!--						<div class="hotels-img">-->
+<!--						<img src="images/logo.jpg">-->
+<!--						<div class="countryCity"><p>$100</p></div>-->
+<!--						<div class="rating">-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star-half-o"></i>-->
+<!--							<i class="fa fa-star-o"></i>-->
+<!--						</div>-->
+<!--						</div>-->
+<!--						<div class="hotel-details">-->
+<!--							<h4>Hotel Trivago</h4>-->
+<!--							<p>This hotel is great because it is very much great and so great that you should be grateful about reading this great hotel</p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					</a>-->
+<!--				</div>-->
+<!--				<div class="col-md-4">-->
+<!--					<a href="rooms.html">-->
+<!--					<div class="hotels-box">-->
+<!--						<div class="hotels-img">-->
+<!--						<img src="images/logo.jpg">-->
+<!--						<div class="countryCity"><p>$100</p></div>-->
+<!--						<div class="rating">-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star-half-o"></i>-->
+<!--							<i class="fa fa-star-o"></i>-->
+<!--						</div>-->
+<!--						</div>-->
+<!--						<div class="hotel-details">-->
+<!--							<h4>Hotel Trivago</h4>-->
+<!--							<p>This hotel is great because it is very much great and so great that you should be grateful about reading this great hotel</p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					</a>-->
+<!--				</div>-->
+<!--				<div class="col-md-4">-->
+<!--					<a href="rooms.html">-->
+<!--					<div class="hotels-box">-->
+<!--						<div class="hotels-img">-->
+<!--						<img src="images/logo.jpg">-->
+<!--						<div class="countryCity"><p>$100</p></div>-->
+<!--						<div class="rating">-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star-half-o"></i>-->
+<!--							<i class="fa fa-star-o"></i>-->
+<!--						</div>-->
+<!--						</div>-->
+<!--						<div class="hotel-details">-->
+<!--							<h4>Hotel Trivago</h4>-->
+<!--							<p>This hotel is great because it is very much great and so great that you should be grateful about reading this great hotel</p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					</a>-->
+<!--				</div>-->
 			</div>
 		</div>
 	</section>
@@ -152,7 +152,37 @@
 				urlSplitted[urlSplitted.length - 1] = 'index.html';
 				window.location.href = urlSplitted.join("/");
 			}
-		})
+		});
+		function append_hotel(hotel) {
+			const html = document.createElement('div');
+			html.setAttribute('class', 'col-md-4');
+			const template = `
+				<div class="hotel">
+				<a href="rooms.html">
+					<div class="hotels-box">
+						<div class="hotels-img">
+							<img src="${hotel.mainHotelPicture}"/>
+							<div class="countryCity">${hotel.country + " " + hotel.city}</div>
+							<div class="rating">
+								<i class="fa fa-star${hotel.StarsCount < 2 ? '-o' : ''}"></i>
+								<i class="fa fa-star${hotel.StarsCount < 3 ? '-o' : ''}"></i>
+								<i class="fa fa-star${hotel.StarsCount < 4 ? '-o' : ''}"></i>
+								<i class="fa fa-star${hotel.StarsCount < 5 ? '-o' : ''}"></i>
+								<i class="fa fa-star${hotel.StarsCount < 6 ? '-o' : ''}"></i>
+							</div>
+						</div>
+						<div class="hotel-details">
+							<h4 class="hotelName">${hotel.name}</h4>
+							<p class="hotelDescription">${hotel.description}</p>
+						</div>
+					</div>
+				</a></div>`;
+			html.innerHTML = template;
+			document.getElementById('hotels').append(html);
+		}
+		fetch('http://localhost:8080/api/hotels')
+				.then((res) => res.json())
+				.then((hotels) => hotels.map(hotel => append_hotel(hotel)))
 	</script>
 
 <!-- <h2>Paging Application</h2>
