--- a/frontend/rooms.html
+++ b/frontend/rooms.html
@@ -34,7 +34,7 @@
 					<div class="hotels-box">
 						<div class="hotels-img">
 						<img src="images/logo.jpg">
-						<div class="price"><p>$100</p></div>
+						<div class="countryCity"><p>$100</p></div>
 						<div class="rating">
 							<i class="fa fa-star"></i>
 							<i class="fa fa-star"></i>
@@ -53,7 +53,7 @@
 					<div class="hotels-box">
 						<div class="hotels-img">
 						<img src="images/logo.jpg">
-						<div class="price"><p>$100</p></div>
+						<div class="countryCity"><p>$100</p></div>
 						<div class="rating">
 							<i class="fa fa-star"></i>
 							<i class="fa fa-star"></i>
@@ -72,7 +72,7 @@
 					<div class="hotels-box">
 						<div class="hotels-img">
 						<img src="images/logo.jpg">
-						<div class="price"><p>$100</p></div>
+						<div class="countryCity"><p>$100</p></div>
 						<div class="rating">
 							<i class="fa fa-star"></i>
 							<i class="fa fa-star"></i>
@@ -91,7 +91,7 @@
 					<div class="hotels-box">
 						<div class="hotels-img">
 						<img src="images/logo.jpg">
-						<div class="price"><p>$100</p></div>
+						<div class="countryCity"><p>$100</p></div>
 						<div class="rating">
 							<i class="fa fa-star"></i>
 							<i class="fa fa-star"></i>
@@ -110,7 +110,7 @@
 					<div class="hotels-box">
 						<div class="hotels-img">
 						<img src="images/logo.jpg">
-						<div class="price"><p>$100</p></div>
+						<div class="countryCity"><p>$100</p></div>
 						<div class="rating">
 							<i class="fa fa-star"></i>
 							<i class="fa fa-star"></i>
