display number of free rooms per hotel

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -175,6 +175,9 @@
 							<h4 class="hotelName">${hotel.name}</h4>
 							<p class="hotelDescription">${hotel.description}</p>
 						</div>
+						<div class="hotel-status">
+							<p class="hotelNumberOfFreeRooms">Free rooms: ${hotel.numberOfFreeRooms}</p>
+						</div>
 					</div>
 				</a></div>`;
 			html.innerHTML = template;
