room types connected

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -158,7 +158,7 @@
 			html.setAttribute('class', 'col-md-4');
 			const template = `
 				<div class="hotel">
-				<a href="rooms.html">
+				<a href="rooms.html?hotelId=${hotel.hotelId}">
 					<div class="hotels-box">
 						<div class="hotels-img">
 							<img src="${hotel.mainHotelPicture}"/>
