--- a/frontend/rooms.html
+++ b/frontend/rooms.html
@@ -27,108 +27,146 @@
 	</section>
 
 	<section class="hotels">
-		<h1>Rooms</h1>
+		<h1>Room Types</h1>
 		<div class="container" id="#listofrooms">
-			<div class="row">
-				<div class="col-md-4">
-					<div class="hotels-box">
-						<div class="hotels-img">
-						<img src="images/logo.jpg">
-						<div class="countryCity"><p>$100</p></div>
-						<div class="rating">
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star-half-o"></i>
-							<i class="fa fa-star-o"></i>
-						</div>
-						</div>
-						<div class="hotel-details">
-							<h4>Room 1</h4>
-							<p>This room is so great because it is very much great and so great that you should be grateful about reading this great hotel</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="hotels-box">
-						<div class="hotels-img">
-						<img src="images/logo.jpg">
-						<div class="countryCity"><p>$100</p></div>
-						<div class="rating">
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star-half-o"></i>
-							<i class="fa fa-star-o"></i>
-						</div>
-						</div>
-						<div class="hotel-details">
-							<h4>Room 2</h4>
-							<p>This room is so great because it is very much great and so great that you should be grateful about reading this great hotel</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="hotels-box">
-						<div class="hotels-img">
-						<img src="images/logo.jpg">
-						<div class="countryCity"><p>$100</p></div>
-						<div class="rating">
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star-half-o"></i>
-							<i class="fa fa-star-o"></i>
-						</div>
-						</div>
-						<div class="hotel-details">
-							<h4>Room 3</h4>
-							<p>This room is so great because it is very much great and so great that you should be grateful about reading this great hotel</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="hotels-box">
-						<div class="hotels-img">
-						<img src="images/logo.jpg">
-						<div class="countryCity"><p>$100</p></div>
-						<div class="rating">
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star-half-o"></i>
-							<i class="fa fa-star-o"></i>
-						</div>
-						</div>
-						<div class="hotel-details">
-							<h4>Room 4</h4>
-							<p>This room is so great because it is very much great and so great that you should be grateful about reading this great hotel</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="hotels-box">
-						<div class="hotels-img">
-						<img src="images/logo.jpg">
-						<div class="countryCity"><p>$100</p></div>
-						<div class="rating">
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star-half-o"></i>
-							<i class="fa fa-star-o"></i>
-						</div>
-						</div>
-						<div class="hotel-details">
-							<h4>Room 5</h4>
-							<p>This room is so great because it is very much great and so great that you should be grateful about reading this great hotel</p>
-						</div>
-					</div>
-				</div>
+			<div class="row" id="roomTypes">
+<!--				<div class="col-md-4">-->
+<!--					<div class="hotels-box">-->
+<!--						<div class="hotels-img">-->
+<!--						<img src="images/logo.jpg">-->
+<!--						<div class="countryCity"><p>$100</p></div>-->
+<!--						<div class="rating">-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star-half-o"></i>-->
+<!--							<i class="fa fa-star-o"></i>-->
+<!--						</div>-->
+<!--						</div>-->
+<!--						<div class="hotel-details">-->
+<!--							<h4>Room 1</h4>-->
+<!--							<p>This room is so great because it is very much great and so great that you should be grateful about reading this great hotel</p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--				<div class="col-md-4">-->
+<!--					<div class="hotels-box">-->
+<!--						<div class="hotels-img">-->
+<!--						<img src="images/logo.jpg">-->
+<!--						<div class="countryCity"><p>$100</p></div>-->
+<!--						<div class="rating">-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star-half-o"></i>-->
+<!--							<i class="fa fa-star-o"></i>-->
+<!--						</div>-->
+<!--						</div>-->
+<!--						<div class="hotel-details">-->
+<!--							<h4>Room 2</h4>-->
+<!--							<p>This room is so great because it is very much great and so great that you should be grateful about reading this great hotel</p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--				<div class="col-md-4">-->
+<!--					<div class="hotels-box">-->
+<!--						<div class="hotels-img">-->
+<!--						<img src="images/logo.jpg">-->
+<!--						<div class="countryCity"><p>$100</p></div>-->
+<!--						<div class="rating">-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star-half-o"></i>-->
+<!--							<i class="fa fa-star-o"></i>-->
+<!--						</div>-->
+<!--						</div>-->
+<!--						<div class="hotel-details">-->
+<!--							<h4>Room 3</h4>-->
+<!--							<p>This room is so great because it is very much great and so great that you should be grateful about reading this great hotel</p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--				<div class="col-md-4">-->
+<!--					<div class="hotels-box">-->
+<!--						<div class="hotels-img">-->
+<!--						<img src="images/logo.jpg">-->
+<!--						<div class="countryCity"><p>$100</p></div>-->
+<!--						<div class="rating">-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star-half-o"></i>-->
+<!--							<i class="fa fa-star-o"></i>-->
+<!--						</div>-->
+<!--						</div>-->
+<!--						<div class="hotel-details">-->
+<!--							<h4>Room 4</h4>-->
+<!--							<p>This room is so great because it is very much great and so great that you should be grateful about reading this great hotel</p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--				<div class="col-md-4">-->
+<!--					<div class="hotels-box">-->
+<!--						<div class="hotels-img">-->
+<!--						<img src="images/logo.jpg">-->
+<!--						<div class="countryCity"><p>$100</p></div>-->
+<!--						<div class="rating">-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star"></i>-->
+<!--							<i class="fa fa-star-half-o"></i>-->
+<!--							<i class="fa fa-star-o"></i>-->
+<!--						</div>-->
+<!--						</div>-->
+<!--						<div class="hotel-details">-->
+<!--							<h4>Room 5</h4>-->
+<!--							<p>This room is so great because it is very much great and so great that you should be grateful about reading this great hotel</p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
 			</div>
 		</div>
 	</section>
 
+	<script>
+		function appendRoomType(roomType) {
+			let html = document.createElement('div');
+			html.setAttribute('class', 'col-md-4');
+
+			const template = `
+				<div class="hotel">
+				<a href="rooms.html">
+					<div class="hotels-box">
+						<div class="hotels-img">
+							<img src="${roomType.photo}"/>
+							<div class="countryCity">Capacity: ${roomType.capacity}</div>
+						</div>
+						<div class="hotel-details">
+							<h4 class="hotelName">${roomType.name}</h4>
+							<p class="hotelDescription">${roomType.description}</p>
+						</div>
+					</div>
+				</a></div>`;
+			html.innerHTML = template;
+			document.getElementById("roomTypes").append(html);
+		}
+		const url = new URL(window.location.href);
+		if(!url.searchParams.get("hotelId")) {
+			const urlSplitted = window.location.href.split("/");
+			urlSplitted[urlSplitted.length - 1] = 'index.html';
+			window.location.href = urlSplitted.join("/");
+		} else {
+			const hotelId = url.searchParams.get("hotelId");
+			fetch(`http://localhost:8080/api/roomTypes?hotelId=${hotelId}`)
+			.then((res) => {
+				if(res.ok) {
+					res.json().then((roomTypes) => roomTypes.map(roomType => appendRoomType(roomType)));
+				}
+			})
+		}
+
+	</script>
 <!-- <h2>Paging Application</h2>
 
 
