fix login button room types page

--- a/frontend/rooms.html
+++ b/frontend/rooms.html
@@ -12,7 +12,7 @@
 	<section class="header">
 		<div class="container">
 			<!-- <img src="images/logo.jpg"> -->
-			<button type="button" class="register-button"  onclick="location.href='login.html'">Login</button>
+			<button type="button" class="register-button" id="logButton" onclick="location.href='login.html'">Login</button>
 			<button type="button" class="login-button" onclick="location.href='about_us.html'">About us</button>
 			<button type="button" class="about-button" onclick="location.href='index.html'">Home</button>
 		</div>
