--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
-  <title>React App</title>
+  <title>AMITA Hotels</title>
 </head>
 
 <body>
